@@ -10,3 +10,4 @@
 20100310 code: loadso_fp -> loadso_pointer_t
 20100310 code: void * -> loadso_handle_t
 20100311 code: imported installer 2.3.1
+20100311 code: imported installer 2.3.2
